2008-12-13  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_map_notify): Xmas workaround:
	Hide launcher and switcher if they are shown when a new window is
	mapped. This enables using things like power menu in launcher and
	switcher views.
	* src/home/hd-switcher.h (hd_switcher_hide_launcher): Make public for
	the above code.

2008-12-12  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Partial checkin of progress indicator implementation.

	* src/mb/hd-atoms.[ch]: Add atom for progress indicator
	* src/home/hd-home.c: Respond to progress indicator change by
	  redrawing screen.
	* src/mb/hd-theme.c: Pick up when to add progress indicator (not
	  yet actually drawn).
	* src/launcher/hd-launcher-app.c: initialise variable to avoid
	  compiler warning.

2008-12-12  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home.c (hd_home_grab_pointer, hd_home_ungrab_pointer,
	  hd_home_do_normal_layout): Fix pointer grab/ungrab with Home edit
	  menu.

2008-12-12  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Changed the default loading screen to a rect created from the theme's
	bg color. Also, remove it after the animation is complete.

	* data/Makefile.am: Removed the blank-window.png file.
	* src/launcher/hd-launcher.c (launcher_signals,
	  hd_launcher_constructed, _hd_launcher_transition_clicked,
	  hd_launcher_transition_app_start, hd_launcher_transition_new_frame,
	  hd_launcher_transition_completed):

2008-12-12  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/launcher/hd-launcher.c:
	  Don't exit launcher view to home view when clicking the backgound
	  where the title area would be.

2008-12-12  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Added X-Maemo-Prestarted=always to imageviewer as requested by the
	dev.

	* data/desktop/image-viewer.w50-desktop:

2008-12-12  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-task-navigator.c: