@@ -5,4 +5,5 @@ res_DATA = \
 	menu-button.png \
 	edit-button.png \
 	launcher-button-highlight.png \
+        blank-window.png \
 	white-particle.png
